--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -76,3 +76,7 @@
     margin: 0 auto;
   }
 }
+
+.section-get-app .download-link__list {
+  justify-content: center;
+}
